<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:textStyle="bold"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" /> <!-- This adds a responsive gap -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="80dp">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/primary"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_placeHolder"
                        style="@style/CustomInputStyle"
                        />
                </TableRow>

            </TableLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>